website/static/website/css/styles.css
/* General styles */
@font-face {
	font-family: adelle-semibold;
	src: url(../fonts/Adelle/adelle_semibold-webfont.ttf);
}

@font-face {
	font-family: adelle-regular;
	src: url(../fonts/Adelle/adelle_reg-webfont.ttf);
}

@font-face {
	font-family: adelle-light;
	src: url(../fonts/Adelle/adelle_light-webfont.ttf);
}

@font-face {
	font-family: adelle-heavy;
	src: url(../fonts/Adelle/adelle_heavy-webfont.ttf);
}

body {
	font-family: adelle-regular;
}

hr {
	margin-top:0;
}

h1 {
	font-family: adelle-semibold;
	font-variant: small-caps;
	font-size: 36px;
	margin-bottom:0;
	padding-bottom:0;
	margin-left:-1px;
}

h4 {
	font-family: adelle-regular;
	font-size: 18px;
	color: #464D59;
	margin-top:0;
	padding-top:0;
}

h5 {
	font-family: adelle-regular;
	font-size: large;
	font-weight: bold;
	margin:0;
	padding:0;
}

.thumbnail {
	margin-bottom:0;
}

.item-info {
	margin:0;
	padding-top:10px;
	padding-bottom:50px;
}

#content {
	position: relative;
}

.main-content {
	margin-left:-10px;
	margin-right:-10px;
}

.shortTextbox {
	width: 100%;
}

.filter-selected {
	font-family: adelle-semibold;
	font-weight: bold;
}

.filter-bar {
	margin-left: 15px;
	margin-top: 85px;
	width: 125px;
	left:0;
	top:-60px;
	font-family: adelle-light;
	text-align: right;
	position:absolute;
}

.filter-bar h1 {
	font-size: 14px;
	margin-bottom:0;
	padding-bottom:0;
	font-weight: regular;
}

.filter-bar li {
	text-decoration: none;
	font-size: 12px;
	list-style: none;
	cursor: pointer;
}

.highlight {
	background-color: yellow;
}

.publication-list {
	padding-left: 145px; /* should be greater than the filter-bar width */
	margin-top: 25px;
}

.publication-list h1 {
	color: #7F7F7F;
	font-size: 24px;
	font-family: adelle-light;
	border-bottom: 1px solid #A6A6A6;
	margin: 5px 0px 3px 0px;
	padding-bottom: 1px;
}

.publication-row {
	padding-top:10px;
	padding-bottom:10px;
	font-family: adelle-light;
	font-size: 14px;
	position:relative;
	min-height: 170px;
}

.publication-row p {
	margin:0;
	padding:0;
}

.publication-row img {
	border: 1px solid #dddddd;
	width:100%;
	max-width:135px;
	margin:auto;
}

.publication-info {
	padding-bottom:20px; /* height of the downloads bar */
	display:table-cell;
	vertical-align: top;
	width: 100%;
	position: relative;
}

.publication-thumbnail {
	width:120px;
	min-width:120px;
	display:table-cell;
	vertical-align: top;
	padding-right:10px;
}

.publication-id {
	font-size: 10px;
	color: #7F7F7F;
	min-width: 40px;
	display: table-cell;
	vertical-align: top;
	text-align: right;
	padding-right: 10px;
}

.publication-title {
	font-family: adelle-regular;
	font-weight: bold;
	color: #464D59;
	font-size: 15px;
}

.publication-authors {
	
}

.publication-venue {
	color: #7F7F7F;
}

.publication-keywords {
	font-size: 11px;
	color: #7F7F7F;
}

.publication-download {
	position: absolute;
	font-size: 12px;
	border-top: 1px solid #dddddd;
	width:100%;
	height: 20px;
	bottom:0;
	right:0px;
	margin-left:5px;
}

/* Custom navbar for filters */
.breadcrumb {
	background-color: transparent;
	margin-bottom:0;
}

.navbar-filter {
    margin-bottom: 0;
    min-height: 30px;
}

.navbar-filter .navbar-nav > li > a {
    /*color:#fff;*/
}
.navbar-filter .navbar-nav > li > a:hover, .navbar-filter .navbar-nav > li > a:focus {
    background-color: transparent;
    color: #23527c;
    text-decoration: underline;
}
.navbar-filter .navbar-brand {
    
}

/* Carousel styles */
.carousel,
.carousel-inner,
.carousel-inner .item {
	height: 500px;
}

.item {
  background: black;
}

.overlay {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	line-height: 500px;
	z-index: 10;
	background-color: rgba(0, 0, 0, 0.55);
}

.fill {
	width:100%;
	height:500px;
	background-position:center;
	background-size:cover;
}

.shortCarousel, .shortCarousel .carousel-inner, .shortCarousel .item {
	height: 250px;
}

.shortCarousel .overlay {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	line-height: 250px;
	vertical-align: bottom;
	display: table-cell;
	padding-top:0;
	z-index: 10;
	background-color: rgba(0, 0, 0, 0.55);
	/*background-image: url(../img/texture.png);
	background-repeat: repeat;
	background-position: 0 0;*/
}

.overlay-title {
	height: 120px;
	line-height: 120px;
	width: 300px;
	text-align: left;
	font-family: adelle-semibold;
	font-weight: bold;
	font-size: 72px;
	font-variant: small-caps;
	margin-left: -3px;
}

.overlay-spacer {
	height: 130px;
	margin-top:0;
}

.shortCarousel .fill {
	width:100%;
	height:335px;
	background-position:center;
	background-size:cover;
}

/* Custom 5-column styles
-------------------------------------------------- */
.col-xs-5ths,
.col-sm-5ths,
.col-md-5ths,
.col-lg-5ths {
    position: relative;
    min-height: 1px;
    padding-right: 10px;
    padding-left: 10px;
}

.col-xs-4-5ths,
.col-sm-4-5ths,
.col-md-4-5ths,
.col-lg-4-5ths {
    position: relative;
    min-height: 1px;
    padding-right: 10px;
    padding-left: 10px;
}

.col-xs-5ths {
    width: 20%;
    float: left;
}

.col-xs-4-5ths {
    width: 80%;
    float: left;
}

@media (min-width: 768px) {
    .col-sm-5ths {
        width: 20%;
        float: left;
    }
    .col-sm-4-5ths {
        width: 80%;
        float: left;
    }
}

@media (min-width: 992px) {
    .col-md-5ths {
        width: 20%;
        float: left;
    }
    .col-md-4-5ths {
        width: 80%;
        float: left;
    }
}

@media (min-width: 1200px) {
    .col-lg-5ths {
        width: 20%;
        float: left;
    }
    .col-lg-4-5ths {
        width: 80%;
        float: left;
    }
}

/* Sticky footer styles
-------------------------------------------------- */
html {
  /*position: relative;
  min-height: 100%;*/
}
body {
  /* Margin bottom by footer height */
  /*margin-bottom: 60px;*/
}
/*.footer {
  height: 60px;
  background-color: #f5f5f5;
  margin-bottom: 0px;
}*/

.footer {
	height: 75px;
	line-height: 75px;
}

.footer-img {
	max-height: 60px;
	vertical-align: middle;
}

/* general styles */

.well {
	border-radius: 0 !important;
}

